fix: fix horizontal scroll

--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
 }
 
 .wrapper {
-  width: 100vw;
+  width: 100%;
   position: relative;
   overflow-x: hidden;
 }
@@ -41,7 +41,7 @@ body {
 .overlay {
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 1;
   display: none;
